visibility bug

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     width: 100vw;
     background: #e3e3e3;
     font-family: 'Righteous', cursive;
